# particles_simulator

./: .gitignore  .gitmodules  README.md  python_requirements.txt
hw-heateqn_pybind/src/: CMakeLists.txt  main.py  system.hh
hw1-optimizing/: README  README.txt  conjugate_gradient.py
hw2/: CMakeLists.txt  README.md
hw2-intro_cpp_oo/: CMakeLists.txt  README  README.md
hw2-intro_cpp_oo/src/: compute_arithmetic.hh  compute_pi.hh  dumper_series.cc  plot_results.py  print_series.cc  series.cc  series.hh
hw2/src/: CMakeLists.txt  compute_arithmetic.cc  compute_arithmetic.hh  compute_pi.cc  compute_pi.hh  dumper_series.cc  dumper_series.hh  main.cc  plot_results.py  print_series.cc  print_series.hh  series.cc  series.hh  write_series.cc  write_series.hh
hw3/: README
hw3-heateqn_fftw/ex_inputs/: gen_highresolution_radial.sh
hw3-heateqn_fftw/src/: compute_temperature.hh  material_point.hh
hw3-particles/: README  sample_input.txt
hw3-particles/src/: CMakeLists.txt  compute_boundary.cc  compute_contact.hh  test_pingpong.cc
hw3/ex_inputs/: gen_highresolution_radial.sh  launch_paraview.sh  paraviewer.pvsm  run_particles.sh
hw3/src/: CMakeCache.txt  CMakeLists.txt  compute_temperature.cc  compute_temperature.hh  fft.hh  generate_heatequation.py  material_point.cc  material_point.hh  material_points_factory.cc  material_points_factory.hh  matrix.hh  test_fft.cc  test_heat_equation.cc
hw4/: README
hw4-heateqn_fftw/: README
hw4-heateqn_fftw/ex_inputs/: run_particles.sh
hw4-heateqn_fftw/src/: CMakeLists.txt  particles_factory_interface.hh
hw4-heateqn_pybind/: README
hw4-heateqn_pybind/src/: material_points_factory.cc
hw4-particles_pybind/: README
hw4-particles_pybind/src/: CMakeLists.txt  compute_temperature.hh  planets_factory.hh  sample_input.txt
hw4/src/: CMakeLists.txt  compute_temperature.cc  compute_temperature.hh  compute_temperature_border.cc  compute_temperature_border.hh  compute_verlet_integration.cc  main.py  material_point.cc  material_points_factory.hh  particles_factory_interface.hh  ping_pong_balls_factory.cc  ping_pong_balls_factory.hh  planets_factory.cc  pypart_binding.cpp  test_fft.cc  test_pybind.py  test_pybindinstall.py
hw5-heateqn_pybind/src/: material_points_factory.hh
hw5-particles/src/: compute_contact.cc  compute_interaction.cc  compute_verlet_integration.cc  ping_pong_balls_factory.cc  planets_factory.cc
src/: _conjugate_gradient.py  conjugate_gradient.py  optimize.py  optimizer.py
